--- a/package/BUILD
+++ b/package/BUILD
@@ -1,2 +1,4 @@
 # How to produce source tarball:
 git archive --format tar --prefix=crow/ HEAD . | gzip -9 > crow.$(date +%Y%m%d)git$(git rev-parse --short HEAD).tar.gz
+
+# then, update Source0 and Version strings in spec file
