--- a/etc/crow.ini
+++ b/etc/crow.ini
@@ -10,6 +10,14 @@ database = crow_%(brand)s
 server = mongodb://mongodbserver:27017
 
 [condor]
-adfilter = /.*/
 historyfile = /var/lib/condor/spool/history
+# This adfilter will accept all classads. Use a Matcher expression
+# to exclude or include classads by name.
+adfilter = /.*/
 
+# matcher-expression := [!]<matcher-atom> [<matcher-expression> logical-conjunction]
+# matcher-atom := <regular-expression> | <glob-expression> | <literal-expression>
+# regular-expression := /[regular expression tokens]/
+# glob-expression := [fnmatch glob, containing ? or *]
+# literal-expression := [anything else]
+# logical-conjunction := OR | AND | NOT
