implement the [ensure] section, and extend JobFilter capability to accomodate

--- a/etc/crow.ini
+++ b/etc/crow.ini
@@ -21,3 +21,6 @@ adfilter = /.*/
 # glob-expression := [fnmatch glob, containing ? or *]
 # literal-expression := [anything else]
 # logical-conjunction := OR | AND | NOT
+
+[ensure]
+ProjectName = -unassigned-
