expand capabilities of db drivers; allow multiple drivers in single run

--- a/etc/crow.ini
+++ b/etc/crow.ini
@@ -4,10 +4,10 @@ brand = generic
 historyinterval = 30
 queueinterval = 60
 detach = true
+db = default
 
 [db]
-database = crow_%(brand)s
-server = mongodb://mongodbserver:27017
+default = mongodb://mongodbserver:27017, crow_%(brand)s
 
 [condor]
 historyfile = /var/lib/condor/spool/history
