config: moved adfilter from [condor] to [classads]

--- a/etc/crow.ini.example
+++ b/etc/crow.ini.example
@@ -11,6 +11,8 @@ default = mongodb://mongodbserver:27017, crow_%(brand)s
 
 [condor]
 historyfile = /var/lib/condor/spool/history
+
+[classads]
 # This adfilter will accept all classads. Use a Matcher expression
 # to exclude or include classads by name.
 adfilter = /.*/
